--- a/tei-editoriale/templates/page.html
+++ b/tei-editoriale/templates/page.html
@@ -1,51 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
+    <head id="head">
         <title data-template="config:app-title">App Title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <meta data-template="config:app-meta"/>
-        <link rel="shortcut icon" href="$shared/resources/images/exist_icon_16x16.ico"/>
-        <link rel="stylesheet" type="text/css" href="$shared/resources/css/bootstrap-3.0.3.min.css"/>
-        <link rel="stylesheet" type="text/css" href="resources/css/style.css"/>
+        <link rel="stylesheet" type="text/css" href="$app-root/resources/css/style.css"/>
         <script type="text/javascript" src="$shared/resources/scripts/jquery/jquery-1.7.1.min.js"/>
         <script type="text/javascript" src="$shared/resources/scripts/loadsource.js"/>
         <script type="text/javascript" src="$shared/resources/scripts/bootstrap-3.0.3.min.js"/>
+        <link id="background"/>
     </head>
     <body id="body">
-        <nav class="navbar navbar-default" role="navigation">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"/>
-                    <span class="icon-bar"/>
-                    <span class="icon-bar"/>
-                </button>
-                <a data-template="config:app-title" class="navbar-brand" href="./index.html">App Title</a>
-            </div>
-            <div class="navbar-collapse collapse" id="navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class="dropdown" id="about">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu</a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="index.html">Accueil</a>
-                            </li>
-                            <li>
-                                <a href="search.html">Recherche</a>
-                            </li>
-                            <li>
-                                <a href="visual.html">Rendu graphique</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <center>
+            <ul class="menu">
+                <li id="index">
+                    <a href="index.html">Accueil</a>
+                </li>
+                <li id="search">
+                    <a href="search.html">Recherche</a>
+                </li>
+                <li id="visual">
+                    <a href="visual.html">Rendu graphique</a>
+                </li>
+            </ul>
+            </center>
         <div id="content" class="container"/>
-        <footer>
-            <a class="poweredby" href="http://exist-db.org">
-                <img src="$shared/resources/images/powered-by.svg" alt="Powered by eXist-db"/>
-            </a>
-        </footer>
     </body>
 </html>
